<resources>
    <string name="app_name">Magic Number</string>
    <string name="action_settings">Settings</string>

    <!-- Main Interface -->
    <string name="welcome">Search for the magic number (1 to 100)</string>
    <string name="toBig">Very Big</string>
    <string name="toSmall">Very Small</string>
    <string name="previousNumber">Previous Number:</string>
    <string name="developer">Developed by OscarOK</string>

    <!-- Fragment Interface -->
    <string name="youWon">YOU WON!</string>
    <string name="phrase">"Los records están para romperse"</string>
    <string name="time">Time</string>
    <string name="tries">Tries</string>
    <string name="leaderboard">Best Record</string>
    <string name="again">Again</string>
    <string name="thanks">Thanks</string>
    <string name="best">Your best RECORD</string>

    <!-- Keyboard Numbers -->
    <string name="key_zero">0</string>
    <string name="key_one">1</string>
    <string name="key_two">2</string>
    <string name="key_three">3</string>
    <string name="key_four">4</string>
    <string name="key_five">5</string>
    <string name="key_six">6</string>
    <string name="key_seven">7</string>
    <string name="key_eight">8</string>
    <string name="key_nine">9</string>

</resources>
