<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/buttonOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setButtonOne"
            android:text="@string/key_one" />

        <Button
            android:id="@+id/buttonTwo"
            android:onClick="setButtonTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_two" />

        <Button
            android:onClick="setButtonThree"
            android:id="@+id/buttonThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_three" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:onClick="setButtonFour"
            android:id="@+id/buttonFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_four" />

        <Button
            android:onClick="setButtonFive"
            android:id="@+id/buttonFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_five" />

        <Button
            android:onClick="setButtonSix"
            android:id="@+id/buttonSix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_six" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:onClick="setButtonSeven"
            android:id="@+id/buttonSeven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_seven" />

        <Button
            android:onClick="setButtonEight"
            android:id="@+id/buttonEight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_eight" />

        <Button
            android:onClick="setButtonNine"
            android:id="@+id/buttonNine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_nine" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:onClick="setButtonErase"
            android:id="@+id/buttonErase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:onClick="setButtonZero"
            android:id="@+id/buttonZero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_zero" />

        <Button
            android:onClick="setButtonReady"
            android:id="@+id/buttonReady"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </TableRow>

</TableLayout>