<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainActivity"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context="com.oscareduardo.magicnumber.MainActivity">

    <RelativeLayout
        android:padding="@dimen/low_margin"
        android:id="@+id/relativeLayoutNumbers"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="8dp"
            android:gravity="center"
            android:hint="@string/app_name"
            android:maxLength="5"
            android:textColorHint="@android:color/white"
            android:textSize="40sp" />

        <ImageButton
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:id="@+id/buttonErase"
            android:visibility="gone"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_backspace" />

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:visibility="gone"
            android:layout_alignParentBottom="true"
            android:id="@+id/textViewPreviousNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previousNumber"
            android:textColor="@android:color/secondary_text_light_nodisable" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/keyboardBackground"
        android:orientation="vertical"
        android:weightSum="10">

        <include layout="@layout/keyboard" />

        <TextView
            android:id="@+id/textViewDeveloper"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textColor="@android:color/secondary_text_light_nodisable"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/developer" />

    </LinearLayout>

</LinearLayout>
